try to fix "Punkt hinzufügen" visual bug on mobile -v5

--- a/src/app/admin-components/bugapoint-management/bugapointpanel/bugapointpanel.component.css
+++ b/src/app/admin-components/bugapoint-management/bugapointpanel/bugapointpanel.component.css
@@ -4,7 +4,6 @@
 
 #bugapointpanel-content {
   overflow: auto;
-  height: calc(100vh - 400px);
 }
 
 mat-expansion-panel {
